# django-parallel-test

./: README.md  django_parallel_test.py  pyproject.toml
